# python-project-lvl3

./: .gitignore  Makefile  README.md  milk-com.html  olegyakovlev-com-.html  pyproject.toml
.github/workflows/: Action-test.yml
milk-com_files/: milk-com---milk.css
page_loader/: __init__.py  args_parser.py  download.py  loader.py
page_loader/scripts/: page_loader.py
tests/: test_downloader.py
tests/fixture/: milk-com-.html
tests/fixtures/: after_test_page.html  before_test_page.html  test_css.css
