[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "browser"
authors = ["K0Hb <goplit2010.konovalov@yandex.ru>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
progress = "^1.6"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
